RESOLVED FIXED153127
[B3][Win64] Compile fixes.
https://bugs.webkit.org/show_bug.cgi?id=153127
Summary [B3][Win64] Compile fixes.
peavo
Reported 2016-01-15 06:39:51 PST
MSVC have several overloads of fmod, pow, and ceil. We need to suggest to MSVC which one we want to use.
Attachments
Patch (5.41 KB, patch)
2016-01-15 06:44 PST, peavo
no flags
Patch (5.02 KB, patch)
2016-01-15 11:46 PST, peavo
no flags
Patch (5.41 KB, patch)
2016-01-15 12:05 PST, peavo
achristensen: review+
peavo
Comment 1 2016-01-15 06:44:55 PST
peavo
Comment 2 2016-01-15 11:46:32 PST
Alex Christensen
Comment 3 2016-01-15 11:48:20 PST
I liked the first patch better. It would fail to compile if the function had a different signature, but the second patch would just force it to compile and crash.
peavo
Comment 4 2016-01-15 12:05:17 PST
peavo
Comment 5 2016-01-15 12:05:45 PST
(In reply to comment #3) > I liked the first patch better. It would fail to compile if the function > had a different signature, but the second patch would just force it to > compile and crash. Thanks, reverted :)
peavo
Comment 6 2016-01-15 13:46:18 PST
Note You need to log in before you can comment on or make changes to this bug.