[B3][Win64] Compile fixes. https://bugs.webkit.org/show_bug.cgi?id=153127

Reviewed by Alex Christensen.

MSVC have several overloads of fmod, pow, and ceil. We need to suggest to MSVC
which one we want to use.

* b3/B3LowerMacros.cpp:
* b3/B3LowerMacrosAfterOptimizations.cpp:
* b3/B3MathExtras.cpp:
(JSC::B3::powDoubleInt32):
* b3/B3ReduceStrength.cpp:


Canonical link: https://commits.webkit.org/171229@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195145 268f45cc-cd09-0410-ab3c-d52691b4dbfc